tests/errors/runtime_division_by_zero.dang
# Test runtime division by zero error
pub result = 42 / 0
